--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,9 +6,9 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "scripts": {
-    "dev": "next dev -p 8002",
+    "dev": "FAST_REFRESH=false NEXT_TELEMETRY_DISABLED=1 next dev -p 8002",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 8002",
     "lint": "next lint",
     "lint-staged": "lint-staged",
     "type-check": "tsc --noEmit"
@@ -25,7 +25,7 @@
     "cors": "^2.8.5",
     "mantine-react-table": "^1.0.0-beta.7",
     "mysql2": "^2.3.3",
-    "next": "13.3.1-canary.4",
+    "next": "13.4.19",
     "openai": "^3.3.0",
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.1",
